# mcstring

./: .gitignore  CMakeLists.txt  README.md
include/mcstring/: dump.h  iterator.h  mcstring.h
src/: dump.c  iterator.c  mcstring.c  memory.c  memory.h  reference.c  reference.h  type.h  unconst.h
test/: mcassert.h  test.c
